--- a/nodejs_chonyuumon/ch02/index.html
+++ b/nodejs_chonyuumon/ch02/index.html
@@ -5,8 +5,8 @@
   <title>Index</title>
 </head>
 <body>
-  <h1>Index</h1>
-  <p>これは、Indexページです。</p>
+  <h1>dummy_title</h1>
+  <p>dummy_content</p>
 </body>
 </html>
 
